--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nguyen Van Hieu</title>
-    <link rel="stylesheet" href="../font-awesome/css/font-awesome.min.css">
-    <link rel="stylesheet" href="../css/b1.css">
+    <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="b1.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css">
     <style>
 
@@ -109,7 +109,7 @@
                     <div class="logo">
                         <img src="">
                     </div>
-                    <img src="../img/hippo11.jpg" alt="Los Angeles" class="d-block" style="width:100%">
+                    <img src="hippo11.jpg" alt="Los Angeles" class="d-block" style="width:100%">
                     <div class="carousel-caption">
                         <h3>10+ AMAZING COLOR </h3>
                         <p>Fully responsive bootstrap Ecommerrece Template.<br>
@@ -118,14 +118,14 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="../img/hippo11.jpg" alt="Chicago" class="d-block" style="width:100%">
+                    <img src="hippo11.jpg" alt="Chicago" class="d-block" style="width:100%">
                     <div class="carousel-caption">
                         <h3>Chicago</h3>
                         <p>Thank you, Chicago!</p>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="../img/hippo11.jpg" alt="New York" class="d-block" style="width:100%">
+                    <img src="hippo11.jpg" alt="New York" class="d-block" style="width:100%">
                     <div class="carousel-caption">
                         <h3>New York</h3>
                         <p>We love the Big Apple!</p>
@@ -157,7 +157,7 @@
         <div class="row">
             <div class="col-xl-3 col-lg-3 col-md-3 col-sm-6">
                 <div class="card">
-                    <img class="card-img-bottom" src="../img/ezreal.jpg" alt="">
+                    <img class="card-img-bottom" src="ezreal.jpg" alt="">
                     <div class="card-body d-flex flex-column">
                         <div class="card-label">
                             <span class="label-new bg-success">New</span>
@@ -179,7 +179,7 @@
             </div>
             <div class="col-xl-3 col-lg-3 col-md-3 col-sm-6">
                 <div class="card">
-                    <img class="card-img-bottom" src="../img/ezreal.jpg" alt="">
+                    <img class="card-img-bottom" src="ezreal.jpg" alt="">
                     <div class="card-body d-flex flex-column">
                         <div class="card-label">
                             <span class="label-new bg-success">New</span>
@@ -200,7 +200,7 @@
             </div>
             <div class="col-xl-3 col-lg-3 col-md-3 col-sm-6">
                 <div class="card">
-                    <img class="card-img-bottom" src="../img/ezreal.jpg" alt="">
+                    <img class="card-img-bottom" src="ezreal.jpg" alt="">
                     <div class="card-body d-flex flex-column">
                         <div class="card-label">
                             <span class="label-sale bg-danger">15% Off</span>
@@ -221,7 +221,7 @@
             </div>
             <div class="col-xl-3 col-lg-3 col-md-3 col-sm-6">
                 <div class="card">
-                    <img class="card-img-bottom" src="../img/ezreal.jpg" alt="">
+                    <img class="card-img-bottom" src="ezreal.jpg" alt="">
                     <div class="card-body d-flex flex-column">
                         <h5 class="card-title text-center">CONSECTETUER ADIPISCING</h5>
                         <p class="card-text text-center">Lorem ipsum dolor sit amet,
@@ -334,10 +334,10 @@
                                 © TSHOP 2014.All right reserved
                             </div>
                             <div class="col-6 d-flex justify-content-end align-items-center">
-                                <img class="mx-2" src="../img/visa.jpg" alt="" style="width:35px;">
-                                <img class="mx-2" src="../img/viettin.png" alt="" style="width:35px;">
-                                <img class="mx-2" src="../img/paypal.png" alt="" style="width:35px;">
-                                <img class="mx-2" src="../img/mb.png" alt="" style="width:35px;">
+                                <img class="mx-2" src="visa.jpg" alt="" style="width:35px;">
+                                <img class="mx-2" src="viettin.png" alt="" style="width:35px;">
+                                <img class="mx-2" src="paypal.png" alt="" style="width:35px;">
+                                <img class="mx-2" src="mb.png" alt="" style="width:35px;">
                             </div>
                         </div>
 
